--- a/css/main.css
+++ b/css/main.css
@@ -1,108 +1,116 @@
 /*
-	Main CSS
- 	Main Theme Color: #38b49d
+Main CSS
+Main Theme Color: #38b49d
 */
 
- /* -------------------------------------------------------------- 
- 	 Reset
-  -------------------------------------------------------------- */
-  ul , footer p , li a ,  p , span , blockquote, td , tr , th {
-			font-family: Verdana, Geneva, sans-serif;
-			font-weight: 200;
-			color: #636467;
-			font-size: 16px;
-	}
-	
-  .light-font , blockquote {
+/* --------------------------------------------------------------
+Reset
+-------------------------------------------------------------- */
+ul , footer p , li a ,  p , span , blockquote, td , tr , th {
+    font-family: Verdana, Geneva, sans-serif;
+    font-weight: 200;
+    color: #636467;
+    font-size: 16px;
+}
+
+.light-font , blockquote {
     color: #a1a1a1;
-  }
-  
-	a:focus , a:active {
-		outline: none !important;
+}
+
+a:focus , a:active, a:hover {
+    outline: none !important;
     text-decoration: none !important;
-	}
+    color: black;
+}
 
-  a {
+a {
     transition: background-color 0.3s;
-  }
+    color: #7CA376;
+}
 
- 	h1 , h1 a , h1 span ,
-	h2 , h2 a , h2 span , 
-	h3 , h3 a , h3 span {
-		color: #3c3c3c;
-		font-family: Verdana, Geneva, sans-serif;
-		font-weight: 500;
-		text-decoration: none;
-		padding: 0px;
-		margin-top: 0px;
-		line-height: 100%;
-	}
+h1 , h1 a , h1 span ,
+h2 , h2 a , h2 span ,
+h3 , h3 a , h3 span {
+    color: #3c3c3c;
+    font-family: Verdana, Geneva, sans-serif;
+    font-weight: 500;
+    text-decoration: none;
+    padding: 0px;
+    margin-top: 0px;
+    line-height: 100%;
+}
 
-	h1 , h1 a {
-		font-size: 40px !important;
-		margin-left: 0%;
-		margin-top: 1%;
-		text-align: center;
-	}
-	
-	h2 , h2 a {
-		font-size: 28px !important;
-	}
-	
-	h3 , h3 a {
-		font-size: 18px !important;
-	}
+h1 , h1 a {
+    font-size: 40px !important;
+    margin-left: 0%;
+    margin-top: 1%;
+    text-align: center;
+}
 
- /* -------------------------------------------------------------- 
-  Main Styles
-  -------------------------------------------------------------- */
+h2 , h2 a {
+    font-size: 28px !important;
+}
 
-	a:hover {
-		text-decoration: none;
-	}
+h3 , h3 a {
+    font-size: 18px !important;
+}
 
-  /* Main buttons color */
-  .goToLink a {
-     background-color: #87AD81;
-  }
+/* --------------------------------------------------------------
+Main Styles
+-------------------------------------------------------------- */
 
-  /*
-    button hover color
-  */
-  .goToLink a:hover {
+.about {
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+/* Main buttons color */
+.goToLink a {
+    background-color: #87AD81;
+}
+
+/*
+button hover color
+*/
+.goToLink a:hover {
     background-color: #dadada;
     border-bottom-color: #c1c0c0;
-  }
+}
 
-  /* social icons background color */
-  .social-icons a {
+/* social icons background color */
+.social-icons a {
     background-color: #dadada;
-  }
+}
 
-	body {
-		background: #f2f2f2;
-	}
+body {
+    background: #f2f2f2;
+}
 
 /* Post content */
 
 section.apps {
-  padding-top: 20px;
-  padding-bottom: 45px;
+    padding-top: 20px;
+    padding-bottom: 45px;
 }
 
 section.apps.single-apps-page {
-  padding-top: 30px;
+    padding-top: 30px;
 }
 
 section.apps > .container > .row >  .single-post {
-  margin-bottom: 100px;
-  clear: both;
-  float: left;
-  width: 100%;
+    margin-bottom: 100px;
+    clear: both;
+    float: left;
+    width: 100%;
 }
 
 section.apps > .container > .row > .single-post:last-child {
-  margin-bottom: 0px;
+    margin-bottom: 0px;
 }
 
 
@@ -113,160 +121,160 @@ section.apps .single-post > .post-image {
 }
 
 .separator {
-	margin-top: 20px;
+    margin-top: 20px;
 }
 
 /* Post content */
 
 section.apps .single-post > .post-content .post-inner-content {float: left;
-clear: both;
-width: 76%;
-padding-left: 8%;
-padding-right: 8%;
-margin-left: 4%;
-padding-top: 45px;
-padding-bottom: 45px;
-background: #fff;
-border-right: 1px solid #E9E9E9;
-border-left: 1px solid #E9E9E9;
-border-bottom: 1px solid #E9E9E9;
-border-radius: 0 0 6px 6px;
+    clear: both;
+    width: 76%;
+    padding-left: 8%;
+    padding-right: 8%;
+    margin-left: 4%;
+    padding-top: 45px;
+    padding-bottom: 45px;
+    background: #fff;
+    border-right: 1px solid #E9E9E9;
+    border-left: 1px solid #E9E9E9;
+    border-bottom: 1px solid #E9E9E9;
+    border-radius: 0 0 6px 6px;
 
--webkit-border-radius: 0 0 6px 6px;}
+    -webkit-border-radius: 0 0 6px 6px;}
 
 
-.single-post .post-inner-content .main-content p , 
-.single-post .post-inner-content .main-content a,
-.single-post .post-inner-content .main-content span,
-.single-post .post-inner-content .main-content blockquote , .apps.single-page .post-inner-content p ,
-.apps.single-page .post-inner-content span, .apps.single-page .post-inner-content blockquote , .apps.single-page .post-inner-content ul li {
-  line-height: 26px;
-}
+    .single-post .post-inner-content .main-content p ,
+    .single-post .post-inner-content .main-content a,
+    .single-post .post-inner-content .main-content span,
+    .single-post .post-inner-content .main-content blockquote , .apps.single-page .post-inner-content p ,
+    .apps.single-page .post-inner-content span, .apps.single-page .post-inner-content blockquote , .apps.single-page .post-inner-content ul li {
+        line-height: 26px;
+    }
 
-.single-post h2.post-header {
-  width: 100%;
-  text-align: center;
-  margin-bottom: 26px;
-}
+    .single-post h2.post-header {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 26px;
+    }
 
-.single-post .post-meta {
-  width: 100%;
-  text-align: center;
-  margin-bottom: 26px;
-}
+    .single-post .post-meta {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 26px;
+    }
 
-.single-post .post-meta span {
-  color: #c1c0c0;
-  padding-left: 25px;
-  margin-right: 30px;
-  font-size: 14px;
+    .single-post .post-meta span {
+        color: #c1c0c0;
+        padding-left: 25px;
+        margin-right: 30px;
+        font-size: 14px;
 
-}
+    }
 
-.goToLink {
-  clear: both;
-  width: 100%;
-  text-align: center;
-  margin-top: 35px;
-  margin-bottom: 25px;
-}
+    .goToLink {
+        clear: both;
+        width: 100%;
+        text-align: center;
+        margin-top: 35px;
+        margin-bottom: 25px;
+    }
 
-.goToLink a {
-  color: #fff;
-  font-weight: 700;
-  text-transform: uppercase;
-  text-align: center;
-  padding: 18px 18px;
-  border-radius: 3px;
-  -webkit-border-radius: 3px;
- 
-}
+    .goToLink a {
+        color: #fff;
+        font-weight: 700;
+        text-transform: uppercase;
+        text-align: center;
+        padding: 18px 18px;
+        border-radius: 3px;
+        -webkit-border-radius: 3px;
 
-.goToLink a:hover {
-    color: #fff !important;
-}
+    }
 
-/*
+    .goToLink a:hover {
+        color: #fff !important;
+    }
+
+    /*
     post content
-*/
-span.highlight {
-  color: #fff;
-}
+    */
+    span.highlight {
+        color: #fff;
+    }
 
 
-/* -------------------------------------------------------------- 
- Footer
--------------------------------------------------------------- */
-#copyright, footer {
-  text-align: center;
-}
+    /* --------------------------------------------------------------
+    Footer
+    -------------------------------------------------------------- */
+    #copyright, footer {
+        text-align: center;
+    }
 
-footer .copyrights {
-  clear: both;
-  width: 100%;
-  margin-bottom: 30px;
-}
+    footer .copyrights {
+        clear: both;
+        width: 100%;
+        margin-bottom: 30px;
+    }
 
-footer .social-icons {
-  margin-top: 0px;
-  width: 100%;
-  margin-bottom: 35px;
-}
+    footer .social-icons {
+        margin-top: 0px;
+        width: 100%;
+        margin-bottom: 35px;
+    }
 
-footer .social-icons a {
-  margin-bottom: 10px;
-}
+    footer .social-icons a {
+        margin-bottom: 10px;
+    }
 
-.social-icons {
-  float: left;
-  clear: both;
-  text-align: center;
-}
+    .social-icons {
+        float: left;
+        clear: both;
+        text-align: center;
+    }
 
-.social-icons a {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
-  background-position: center center;
-  background-repeat: no-repeat;
-  border-radius: 3px;
-  display: inline-block;
-  position: relative;
-  transition: background-color 0.5s;
-}
+    .social-icons a {
+        width: 40px;
+        height: 40px;
+        margin-right: 10px;
+        background-position: center center;
+        background-repeat: no-repeat;
+        border-radius: 3px;
+        display: inline-block;
+        position: relative;
+        transition: background-color 0.5s;
+    }
 
-.social-icons a:last-child {
-  margin-right: 0px;
-}
+    .social-icons a:last-child {
+        margin-right: 0px;
+    }
 
-.social-icons a.email {
-  background-image: url(../images/email.png);
-}
+    .social-icons a.email {
+        background-image: url(../images/email.png);
+    }
 
-.social-icons a.twitter {
-  background-image: url(../images/twitter.png);
-}
+    .social-icons a.twitter {
+        background-image: url(../images/twitter.png);
+    }
 
-.social-icons a.github {
-  background-image: url(../images/github.png);
-}
+    .social-icons a.github {
+        background-image: url(../images/github.png);
+    }
 
-.social-icons a.linkedin {
-  background-image: url(../images/linkedin.png);
-}
+    .social-icons a.linkedin {
+        background-image: url(../images/linkedin.png);
+    }
 
-.social-icons a.email:hover {
-	background-color: #87AD81;
-}
+    .social-icons a.email:hover {
+        background-color: #87AD81;
+    }
 
-.social-icons a.twitter:hover {
-	background-color: #9ae4e8;
-}
+    .social-icons a.twitter:hover {
+        background-color: #9ae4e8;
+    }
 
-.social-icons a.github:hover {
-	background-color: #801480;
-}
+    .social-icons a.github:hover {
+        background-color: #801480;
+    }
 
-.social-icons a.linkedin:hover {
- background-color: #005987;
-}
+    .social-icons a.linkedin:hover {
+        background-color: #005987;
+    }
