Set min and max for about me

--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,8 @@ Main Styles
 .about {
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    min-width: 375px;
+    max-width:850px;
 }
 
 a:hover {
