--- a/css/featured-pages.css
+++ b/css/featured-pages.css
@@ -73,6 +73,16 @@ Main Content
     padding-bottom: 5%;
 }
 
+#top-marks {
+    background-image: url("../images/university-background.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+h2, h3, p {
+    color: white;
+}
+
 section.main-image {
     padding-top: 10%;
     padding-bottom: 10%;
