--- a/css/main.css
+++ b/css/main.css
@@ -98,13 +98,13 @@ hr {
 button hover color
 */
 .goToLink a:hover {
-    background-color: #dadada;
+    background-color: #4D5359;
     border-bottom-color: #c1c0c0;
 }
 
 /* social icons background color */
 .social-icons a {
-    background-color: #dadada;
+    background-color: #4D5359;
 }
 
 .social-icons {
@@ -116,7 +116,7 @@ button hover color
 }
 
 body {
-    background: #f2f2f2;
+    background: #25282B;
     position: relative;
     height: 100vh;
     padding: 0;
